Fix crash when mounting btrfs volumes

Found item has data offset higher than block size. Move the stream to get the
data. If the data does not fit in the block, fetch it directly from the device.

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>

Fixes #12788.